--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,6 +14,33 @@
     <string name="main_create_room_btn">방 만들기</string>
     <string name="main_search_room_btn">방 찾기</string>
 
+    <!--게임세팅-->
+    <string name="game_setting_dialog_title">게임 설정</string>
+    <string name="game_setting_dialog_confirm_btn">확인</string>
+    <string name="game_setting_dialog_cancel_btn">취소</string>
+    <string name="game_setting_dialog_mode_title">게임 모드</string>
+    <string name="game_setting_dialog_length_title">글자 수</string>
+    <string name="game_setting_dialog_time_title">제한 시간</string>
+    <string name="game_setting_dialog_mode_hunmin">훈민정음</string>
+    <string name="game_setting_dialog_mode_kung">쿵쿵따</string>
+    <string name="game_setting_dialog_length_2">2글자</string>
+    <string name="game_setting_dialog_length_3">3글자</string>
+    <string name="game_setting_dialog_time_10">10초</string>
+    <string name="game_setting_dialog_time_20">20초</string>
+
+    <!--대기실화면-->
+    <string name="wait_room_back_btn">나가기</string>
+    <string name="wait_room_entrylist_title">Player</string>
+    <string name="wait_room_entrylist_count">명</string>
+    <string name="wait_room_game_mode_title">Game Mode</string>
+    <string name="wait_room_game_guide_btn">설명</string>
+    <string name="wait_room_chosung_length_title">글자 수</string>
+    <string name="wait_room_game_time_title">게임 시간</string>
+    <string name="wait_room_qrcode_title">QR 코드</string>
+    <string name="wait_room_game_start_btn">게임 시작</string>
+
+
+
     <!--훈민정음 게임-->
     <string name="hunminGame_hint">단어를 입력해주세요</string>
     <string name="hunminGame_answer">정답입니다</string>
