--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,9 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
 
 
+    <string name="dialog_confirm_btn">확인</string>
+    <string name="dialog_cancel_btn">취소</string>
+
     <!--닉네임-->
     <string name="nickname_hint">닉네임을 입력해주세요</string>
     <string name="nickname_confirm_btn">확인</string>
@@ -44,6 +47,12 @@
     <string name="wait_room_qrcode_title">QR 코드</string>
     <string name="wait_room_game_start_btn">게임 시작</string>
     <string name="wait_room_fail_exit_room">방에서 나가는데 실패했습니다\n다시한번 시도해주세요</string>
+
+
+    <!--대기실 나가기 다이얼로그-->
+    <string name="exit_wait_room_dialog_title">대기방 나가기</string>
+    <string name="exit_wait_room_dialog_content">대기방에서 나가시겠습니까?</string>
+
 
 
     <!--훈민정음 게임-->
