--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="main_search_room_btn">방 찾기</string>
     <string name="main_fail_make_room">방 생성에 실패하였습니다\n다시 시도해주세요</string>
 
-    <!--메인화면-->
+    <!--QR카메라-->
     <string name="qrcamera_fail_find_room">QR코드에 해당하는 방이 존재하지 않습니다</string>
 
 
@@ -52,6 +52,7 @@
     <!--대기실 나가기 다이얼로그-->
     <string name="exit_wait_room_dialog_title">대기방 나가기</string>
     <string name="exit_wait_room_dialog_content">대기방에서 나가시겠습니까?</string>
+
 
 
 
