--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,4 +68,11 @@
     <string name="kkungDda_finishGame">그만하기</string>
 
 
+    <!--게임 오버화면-->
+    <string name="game_over_kkt_title">걸린 사람</string>
+    <string name="game_over_hunmin_title">순위 발표</string>
+    <string name="game_over_restart">게임 재시작</string>
+    <string name="game_over_finish">게임 종료</string>
+
+
 </resources>
