--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -58,7 +58,7 @@
 
 
     <!--훈민정음 게임-->
-    <string name="hunminGame_hint">단어를 입력해주세요</string>
+    <string name="hunminGame_hint">단어를 입력하세요.</string>
     <string name="hunminGame_answer">정답입니다</string>
     <string name="hunminGame_wrong">제시한 초성과 다른 단어입니다</string>
 
