게임종료 디자인 추가

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -65,9 +65,9 @@
 
     <!--게임 오버화면-->
     <string name="game_over_kkt_title">걸린 사람</string>
-    <string name="game_over_hunmin_title">순위 발표</string>
-    <string name="game_over_restart">게임 재시작</string>
-    <string name="game_over_finish">게임 종료</string>
+    <string name="game_over_hunmin_title">게임 종료</string>
+    <string name="game_over_restart">다시하기</string>
+    <string name="game_over_finish">게임종료</string>
 
 
 </resources>
